--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
                     </picture>
                     <div class="sp_portfolio_menu">
                         <div class="menu_title">
-                            service
+                            できること
                         </div>
                         <div class="sp_menu_subtitle">
-                            できること
+                            Service
                         </div>
                     </div>
                 </div>
@@ -164,10 +164,10 @@
                 </div>
                 <div class="portfolio_menu">
                     <div class="menu_title">
-                        service
+                        できること
                     </div>
                     <div class="menu_subtitle">
-                        できること
+                        Service
                     </div>
                 </div>
                 <div class="service_card">
@@ -255,10 +255,10 @@
             <div id="works_contents">
                 <div class="portfolio_menu">
                     <div class="menu_title">
-                        works
+                        制作実績
                     </div>
                     <div class="menu_subtitle">
-                        制作実績
+                        Works
                     </div>
                 </div>
                 <div class="works_container">
@@ -270,42 +270,58 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <a href="works_content-01.html">
-                                            <img src="./images/works01.jpg" alt="works01">
+                                            <img src="./images/works01.jpg"
+                                                onmouseover="this.src='./images/works01_hover.jpg'"
+                                                onmouseout="this.src='./images/works01.jpg'" alt="works01" />
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="works_content-02.html">
-                                            <img src="./images/works02.jpg" alt="works02">
+                                            <img src="./images/works02.jpg"
+                                                onmouseover="this.src='./images/works02_hover.jpg'"
+                                                onmouseout="this.src='./images/works02.jpg'" alt="works02" />
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="works_content-03.html">
-                                            <img src="./images/works03.jpg" alt="works03">
+                                            <img src="./images/works03.jpg"
+                                                onmouseover="this.src='./images/works03_hover.jpg'"
+                                                onmouseout="this.src='./images/works03.jpg'" alt="works03" />
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="works_content-04.html">
-                                            <img src="./images/works04.jpg" alt="works04">
+                                            <img src="./images/works04.jpg"
+                                                onmouseover="this.src='./images/works04_hover.jpg'"
+                                                onmouseout="this.src='./images/works04.jpg'" alt="works04" />
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="works_content-05.html">
-                                            <img src="./images/works05.jpg" alt="works05">
+                                            <img src="./images/works05.jpg"
+                                                onmouseover="this.src='./images/works05_hover.jpg'"
+                                                onmouseout="this.src='./images/works05.jpg'" alt="works05" />
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="works_content-06.html">
-                                            <img src="./images/works06.jpg" alt="works06">
+                                            <img src="./images/works06.jpg"
+                                                onmouseover="this.src='./images/works06_hover.jpg'"
+                                                onmouseout="this.src='./images/works06.jpg'" alt="works06" />
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="works_content-07.html">
-                                            <img src="./images/works07.jpg" alt="works07">
+                                            <img src="./images/works07.jpg"
+                                                onmouseover="this.src='./images/works07_hover.jpg'"
+                                                onmouseout="this.src='./images/works07.jpg'" alt="works07" />
                                         </a>
                                     </div>
                                     <div class="swiper-slide">
                                         <a href="works_content-08.html">
-                                            <img src="./images/works08.jpg" alt="works08">
+                                            <img src="./images/works08.jpg"
+                                                onmouseover="this.src='./images/works08_hover.jpg'"
+                                                onmouseout="this.src='./images/works08.jpg'" alt="works08" />
                                         </a>
                                     </div>
                                 </div>
@@ -336,10 +352,10 @@
             <div id="about_contents">
                 <div class="portfolio_menu">
                     <div class="menu_title">
-                        about
+                        私について
                     </div>
                     <div class="menu_subtitle">
-                        わたしについて
+                        About
                     </div>
                 </div>
                 <picture class="about_portrait">
@@ -383,18 +399,15 @@
 
         <section data-scroll-section class="scroll_section contact">
             <div id="contact_contents">
-                <!-- <picture class="contact_img">
-                    <img class="pc_contact_img" src="./images/pc_contact-100.png" alt="contact_photo">
-                </picture> -->
                 <div class="contact_gradation">
                 </div>
                 <div class="contact_portfolio_menu">
                     <div class="portfolio_menu">
                         <div class="menu_title">
-                            contact
+                            お問い合わせ
                         </div>
                         <div class="menu_subtitle">
-                            お問い合わせ
+                            Contact
                         </div>
                     </div>
                     <div class="menu_text">
