--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                                 </div>
                             </div>
                             <p class="card-text">
-                                PCやタブレット、スマートフォンにも対応した<br>
-                                サイトを作成いたします。<br>
+                                PCやタブレット、スマートフォンにも<br>
+                                対応した サイトを作成いたします。<br>
                                 jQueryで簡単な動きをつけることも可能です。
                             </p>
                         </div>
@@ -234,7 +234,8 @@
                                 </div>
                             </div>
                             <p class="card-text">
-                                デザイン・コーディングなど、お気軽にご相談ください。<br>
+                                デザイン・コーディングなど、<br>
+                                お気軽にご相談ください。<br>
                                 通常3日以内に返信させていただきます。<br>
                             </p>
                         </div>
