--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                         </a>
                     </li>
                     <li class="nav_list_text">
+                        <a href="#introduction_contents">
+                            intro
+                        </a>
+                    </li>
+                    <li class="nav_list_text">
                         <a href="#service_contents">
                             service
                         </a>
@@ -59,6 +64,11 @@
                     <li class="nav_list_text">
                         <a href="#portfolio_top">
                             home
+                        </a>
+                    </li>
+                    <li class="nav_list_text">
+                        <a href="#introduction_contents">
+                            introduction
                         </a>
                     </li>
                     <li class="nav_list_text">
@@ -142,6 +152,84 @@
                 </div>
 
             </header>
+        </section>
+
+        <section data-scroll-section class="scroll_section introduction">
+            <div id="introduction_contents">
+                <picture class="introduction_img">
+                    <img src="./images/introduction-img.png" alt="introdiction">
+                </picture>
+                <div class="pc_portfolio_menu">
+                    <div class="menu_title">
+                        はじめに
+                    </div>
+                    <div class="menu_subtitle">
+                        Introduction
+                    </div>
+                </div>
+                <picture class="introduction_img01">
+                    <img src="./images/introduction-img01.jpg" alt="introduction_img01">
+                </picture>
+                <div class="sp_portfolio_menu">
+                    <div class="menu_title">
+                        はじめに
+                    </div>
+                    <div class="menu_subtitle">
+                        Introduction
+                    </div>
+                </div>
+                <div class="pc_introduction-text">
+                    <p class="pc_main-text">
+                        ご覧いただき<br>
+                        ありがとうございます
+                    </p>
+                    <p class="pc_sub-text">
+                        デザインを作成するにあたり<br>
+                        わたしが大切にしていきたいことは<br>
+                        「いろんな人の想いを調和させ、デザインを通して表現する」<br>
+                        ということです。<br>
+                        <br>
+                        クライアント様、その先にいるお客様、私たち作り手、<br>
+                        様々な立場の人の考えや意見が調和したデザインは<br>
+                        届けたい人に届くと信じています。<br>
+                        <br>
+                        このポートフォリオのモチーフとなる「枯山水」の<br>
+                        砂紋や石、葉や文字といった要素が重なってできる<br>
+                        調和を感じながらぜひごゆっくりご覧ください。
+                    </p>
+                </div>
+                <div class="sp_introduction-text">
+                    <div class="sp_introduction-text_box">
+                        <p class="sp_main-text">
+                            ご覧いただき<br>
+                            ありがとう<br>
+                            ございます
+                        </p>
+                        <picture class="sp_introduction-img02">
+                            <img src="./images/sp_introduction-img02.jpg" alt="introduction-img02">
+                        </picture>
+                    </div>
+                    <p class="sp_sub-text">
+                        デザインを作成するにあたり<br>
+                        わたしが大切にしていきたいことは<br>
+                        「いろんな人の想いを調和させ、<br>
+                        デザインを通して表現する」 ということです。<br>
+                        <br>
+                        クライアント様、その先にいるお客様、<br>
+                        私たち作り手、 様々な立場の人の<br>
+                        考えや意見が調和したデザインは<br>
+                        届けたい人に届くと信じています。<br>
+                        <br>
+                        このポートフォリオのモチーフとなる<br>
+                        「枯山水」の 砂紋や石、葉や文字といった<br>
+                        要素が重なってできる 調和を感じながら<br>
+                        ぜひごゆっくりご覧ください。
+                    </p>
+                </div>
+                <picture class="pc_introduction_img02">
+                    <img src="./images/introduction-img02.jpg" alt="introduction_img02">
+                </picture>
+            </div>
         </section>
 
         <section data-scroll-section class="scroll_section service">
