--- a/works_content-07.html
+++ b/works_content-07.html
@@ -34,6 +34,11 @@
                         </a>
                     </li>
                     <li class="nav_list_text">
+                        <a href="index.html#introduction_contents">
+                            intro
+                        </a>
+                    </li>
+                    <li class="nav_list_text">
                         <a href="index.html#service_contents">
                             service
                         </a>
@@ -66,6 +71,11 @@
                     <li class="nav_list_text">
                         <a href="index.html#portfolio_top">
                             home
+                        </a>
+                    </li>
+                    <li class="nav_list_text">
+                        <a href="index.html#introduction_contents">
+                            intro
                         </a>
                     </li>
                     <li class="nav_list_text">
