--- a/works_list.html
+++ b/works_list.html
@@ -209,7 +209,7 @@
             <img class="stone_img1" src="images/stone1(pc_works_list).png" alt="stone">
         </picture>
 
-        <!-- <div id="works_wrapper-04">
+        <div id="works_wrapper-04">
             <div class="gradation">
             </div>
             <div class="works_content">
@@ -234,7 +234,7 @@
                     </div>
                 </a>
             </div>
-        </div> -->
+        </div>
     </section>
 
     <section class="sp_works_container">
