--- a/works_list.html
+++ b/works_list.html
@@ -214,7 +214,7 @@
             </div>
             <div class="works_content">
                 <a href="./works_content-07.html">
-                    <img class="banner_img" src="./images/東京おすすめスポット.png" alt="Webメディアアイキャッチ">
+                    <img class="banner_img" src="./images/tokyo-recommend-spot.png" alt="Webメディアアイキャッチ">
                     <div class="works_service">
                         web banner
                     </div>
@@ -225,7 +225,7 @@
             </div>
             <div class="works_content">
                 <a href="./works_content-08.html">
-                    <img class="banner_img" src="./images/works_サラダ.png" alt="Webメディアアイキャッチ">
+                    <img class="banner_img" src="./images/works_salad.png" alt="Webメディアアイキャッチ">
                     <div class="works_service">
                         web banner
                     </div>
