--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                                                 onmouseout="this.src='./images/works06.jpg'" alt="works06" />
                                         </a>
                                     </div>
-                                    <!-- <div class="swiper-slide">
+                                    <div class="swiper-slide">
                                         <a href="works_content-07.html">
                                             <img src="./images/works07.jpg"
                                                 onmouseover="this.src='./images/works07_hover.jpg'"
@@ -412,7 +412,7 @@
                                                 onmouseover="this.src='./images/works08_hover.jpg'"
                                                 onmouseout="this.src='./images/works08.jpg'" alt="works08" />
                                         </a>
-                                    </div> -->
+                                    </div>
                                 </div>
                                 <div class="swiper-button-prev"></div>
                                 <div class="swiper-button-next"></div>
