--- a/works_list.html
+++ b/works_list.html
@@ -342,7 +342,7 @@
             <img class="stone_img1" src="images/stone1(pc_works_list).png" alt="stone">
         </picture>
 
-        <!-- <div id="sp_works_wrapper-07">
+        <div id="sp_works_wrapper-07">
             <div class="gradation">
             </div>
             <div class="works_content">
@@ -372,7 +372,7 @@
                     </div>
                 </a>
             </div>
-        </div> -->
+        </div>
     </section>
 
     <section class="contact">
