--- a/works_content-07.html
+++ b/works_content-07.html
@@ -154,7 +154,7 @@
     </section>
 
     <section class="works_wrapper02">
-        <img src="./images/東京おすすめスポット.jpg" alt="tokyo-spot">
+        <img src="./images/tokyo-recommend-spot.jpg" alt="tokyo-spot">
     </section>
 
     <section class="contact">
