--- a/works_content-08.html
+++ b/works_content-08.html
@@ -153,7 +153,7 @@
     </section>
 
     <section class="works_wrapper02">
-        <img src="./images/works_サラダ.jpg" alt="salad">
+        <img src="./images/works_salad.jpg" alt="salad">
     </section>
 
     <section class="contact">
